Fix proposal cost adjustment alignment

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
+
+  .no-number-spinner {
+    -moz-appearance: textfield;
+  }
+  .no-number-spinner::-webkit-outer-spin-button,
+  .no-number-spinner::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 
 @layer components {
